6.0.9
Issue 3404 New-BcContainerBcUser fails with 'Invoke-SqlCmd' error when running BC24
Remove support for pre 1.0.2.15 generic images
Issue 3406 Regression - Set-BcContainerKeyVaultAadAppAndCertificate only worked when running pwsh in container

6.0.8
Fix error where Publish-BcNuGetPackageToContainer doesn't work with BC 24

6.0.7
Issue 3347 Download-BcNuGetPackageToFolder to support package description for app name if title is not specified
Support dependency version templates on NuGet packages
Issue 3349 NuGet package files section name is wrong when using azure blob storage direct download url
Issue 3358 Run-TestsInBcContainer using Windows Authentication doesn't work if exactly one user exists in the tenant
Fix error in Get-BcContainerAppInfo in NextMajor
Check-BcContainerHelperPermissions didn't work on PS7
Issue #3379 Adding -installCertificateOnHost to New-BcContainer didn't work when running PS7 (silently failed)
Issue #3376 Regression - Download-Artifacts stopped downloading pre-requisites
Issue 3371 Unable to get companyname from Windows Users when running tests
Disallow invoking Run-ALPipeline with `keepContainer` without specifying credentials to use
Issue 3369 Patch images version 1.0.2.15 with an updated installer
Add awareness of Windows 11 23H2
Patch images version 1.0.2.15 with an updated prompt.ps1, which loads PowerShell 7 modules when running pwsh
Add new setting usePwshForBC24, which is default true to instruct Invoke-ScriptInBcContainer to use pwsh (PS7) instead of powershell (PS5) when invoking scripts in BC 24+ containers
Add parameter usePwsh to Open-BcContainer and Invoke-ScriptInBcContainer, defaulted to the value of the usePwshForBC24 setting

6.0.6
Include Microsoft_Business Foundation Test Libraries.app when importing test libraries (and tests)
Include Microsoft_System Application Test.app and Microsoft_Business Foundation Tests.app when importing tests