@@ -2,6 +2,7 @@
 Issue 3404 New-BcContainerBcUser fails with 'Invoke-SqlCmd' error when running BC24
 Remove support for pre 1.0.2.15 generic images
 Issue 3406 Regression - Set-BcContainerKeyVaultAadAppAndCertificate only worked when running pwsh in container
+Issue 3407 Export-NavContainerDatabasesAsBacpac fails using PS7x (and with tenants on BC24 altogether)
 
 6.0.8
 Fix error where Publish-BcNuGetPackageToContainer doesn't work with BC 24
